# OttoCar-PC

./: .gitignore  .sublime-project  mkrs.sh  notes.txt
bags/: current
bags/testlauf 01 - 15.11.2013/: 2013-11-15-18-08-36.bag  2013-11-15-18-12-02.bag  2013-11-15-19-51-47.bag  readme.md  run-01-2013-11-15-18-08-36.bag  run-02-2013-11-15-18-12-02.bag
bags/tests-08.01.2014/: rqt.perspective  script.sh
bags/tests-08.01.2014/cmd/: kreisfahrt.bag
bags/tests-1/: run-03-2013-11-15-19-51-47.bag
bags/tests-2/: bag.launch
bags/tests-2/cmd/: geradlinig.bag
bags/tests-20.01.2014/: ar.launch  bag.launch  list_cam_modes.sh  usbcam.launch
bags/tests-3/: ar.launch  calc_rps.py  imageview.launch  rviz.launch  script.sh  script2.sh  steuerung.py  usbcam.launch
bags/tests-3/cmd/: einparken.bag  einparken_zurueck.bag  geradlinig.bag  kreisfahrt.bag
bags/unnamed/: 2013-09-13-10-44-51.bag  2013-09-23-18-45-37.bag  2013-09-23-18-51-02.bag  2013-09-23-20-36-32.bag  2013-09-26-15-04-27.bag
launch/: imu_test.launch  test_calc_veloc.launch  test_high_pass_accel.launch  test_remove_gravity.launch  test_remove_gravity.rviz  test_remove_gravity_core.launch
launch/experiments/: bag-15-11-01.launch  compare_veloc_performance_of_high_pass_and_remove_gravity.launch  eval_calc_pose_with_synth_data.launch  test_synth_data.launch
launch/imu/: connect_to_imu_on_avr.launch  default.launch
launch/orientation/: default.launch  madgwick.launch
launch/pose/: default.launch  simple_integrate.launch
launch/remove_gravity/: by_orientation.launch  default.launch  with_highpass.launch  with_lowpass.launch
launch/synth/: circular.launch
launch/velocity/: default.launch  high_pass.launch  simple_integrate.launch
launch/viz/: eval_calc_pose_with_synth_data.launch  synth_data.launch
launch/viz/rviz/: eval_calc_pose_with_synth_data.rviz
rviz/: madgwick.rviz  synth_data.rviz
src/allan_variance/: CMakeLists.txt  package.xml
src/allan_variance/scripts/: listener.py
src/markerLoc/: .gitignore  calib.sh  calib_template.yaml  camcheck.sh  camera_calibration.yaml  camera_calibration_laptop_cam.yaml  gen_calibs.sh  gen_yaml.sh  mainpage.dox  manifest.xml  marker-gen.url
src/markerLoc/calibs/: 1600x1200.yaml  800x600.yaml
src/markerLoc/data/: 0.patt  11.patt  22.patt  33.patt  44.patt  59.patt  63.patt  marker_list.dat.old  marker_list.dat~  ottocar.patt  world.patt  youbot.patt
src/markerLoc/launch/: extLoc.launch  extLoc.launch~  markerLoc.rviz
src/ottocar_controller/: CMakeLists.txt  package.xml
src/ottocar_controller/scripts/: lane_controller.py  trajectory_controller.py
src/ottocar_navigation/: CMakeLists.txt  package.xml
src/ottocar_navigation/launch/: calibration_filter.launch
src/ottocar_navigation/scripts/: calc_pose.py  calc_veloc.py  calibration_filter.py  fahrdiewandlang.py  flow.py  geradeaus.py  high_pass_accel.py  kalman.py  lane_controller.py  pose_test.py  process_bag.py  quaternion.py  remove_gravity.py  remove_gravity_with_highpass.py  remove_gravity_with_lowpass.py  simple_integrate.py  simplegyrofilter.py  synth_data.py
src/ottocar_perception/: CMakeLists.txt  package.xml
src/ottocar_perception/src/: calibBirdsEye.cpp  image_converter.cpp_bak  ottoCarUsbCam_car.launch  ottoCarUsbCam_lap.launch  ottoCarUvcCam.launch  ottoCarVisLoc.cpp  ottoCarVisLoc.cpp_bak_08.01.14  ottoCarVisLoc.cpp_bak_31.01.14  ottoCarVisLoc.cpp_bak_cvcapture  ottoCarVisLocOutputViz.cpp
src/ottocar_ui/: CMakeLists.txt  package.xml
src/ottocar_ui/scripts/: car_ctrl_joystick.py  car_ctrl_joystick_buggy_brake.py  car_ctrl_joystick_ros.py  car_ctrl_joystick_ros_rps.py  joystick.py  joystick_old.py  rf_stick.py  ui.py
src/ottocar_utils/: CMakeLists.txt  package.xml  setup.py
src/ottocar_utils/launch/: imu_conv.launch
src/ottocar_utils/scripts/: P_Controller.py  delay1s.sh  exec.sh  imu_conv.py  log.py  moving_standard_deviation.py
src/ottocar_utils/spark/: __init__.py
(+11 files in other folders)
